# english_quiz_api

./: .gitignore  README.md  create_tables.py  main.py  pyproject.toml  requirements.txt  test.py
api/: users.py  word.py
app/: main.py
app/api/: __init__.py  deps.py
app/api/routes/: users.py  word.py
app/core/: db_config.py  logging_config.py
app/crud/: word.py
app/db/: async_connection.py  session.py
app/dependencies/: crud.py  db.py  repository_provider.py  service_provider.py  services.py
app/exceptions/: handlers.py
app/middleware/: cors.py  logging.py  request_id.py
app/models/: __init__.py  user.py  word.py
app/repositories/: user_repository.py
app/schemas/: user.py  word.py
app/services/: auth_service.py  user.py  word.py  word_service.py
app/utils/: jwt_helper.py
dependencies/: auth_guard.py  repository_provider.py  service_provider.py
models/: schema.py  user.py
repositories/: user_repository.py  word_repository.py
schemas/: user.py
scripts/: run.py
services/: auth.py  auth_service.py  word_service.py
