[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "ge1123",email = "as8354093@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "aioodbc (==0.5.0)",
    "annotated-types (==0.7.0)",
    "anyio (==4.9.0)",
    "bcrypt (==3.2.0)",
    "cffi (==1.17.1)",
    "click (==8.2.1)",
    "colorama (==0.4.6)",
    "ecdsa (==0.19.1)",
    "fastapi (==0.115.12)",
    "greenlet (==3.2.2)",
    "h11 (==0.16.0)",
    "httptools (==0.6.4)",
    "idna (==3.10)",
    "passlib (==1.7.4)",
    "pyasn1 (==0.6.1)",
    "pycparser (==2.22)",
    "pydantic (==2.11.5)",
    "pydantic-core (==2.33.2)",
    "pyodbc (==5.2.0)",
    "python-dotenv (==1.1.0)",
    "python-jose (==3.5.0)",
    "pyyaml (==6.0.2)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "sqlalchemy (==2.0.41)",
    "starlette (==0.46.2)",
    "typing-inspection (==0.4.1)",
    "typing-extensions (==4.14.0)",
    "uvicorn (==0.34.3)",
    "watchfiles (==1.0.5)",
    "websockets (==15.0.1)",
    "pytest-asyncio (>=1.0.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "rich (>=14.0.0,<15.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "faker (>=37.3.0,<38.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.16.0"
ruff = "^0.11.13"
pytest = "^8.4.0"
pre-commit = "^4.2.0"

